# totemanimalquiz

./: .env.example  .gitignore  README.md  pyproject.toml
src/totem_animal_bot/: __init__.py  cache.py  config.py  data.py  handlers.py  keyboards.py  main.py  models.py  quiz.py  state.py
tests/: test_quiz.py  test_state.py
