[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "totem-animal-quiz-bot"
version = "1.0.0"
description = "A Telegram quiz bot that matches users with a Moscow Zoo animal."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytelegrambotapi>=4.26,<5",
    "python-dotenv>=1.0,<2",
    "redis>=5.2,<6",
    "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=6,<7",
    "ruff>=0.12,<1",
]

[project.scripts]
totem-animal-bot = "totem_animal_bot.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/totem_animal_bot"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
